--- a/carte.html
+++ b/carte.html
@@ -338,6 +338,8 @@
           <P>L’abus d’alcool est dangereux pour la santé, à consommer avec modération</P>
           <!-- Wines and champagne-->
           <button class="accordion">Vins et champagnes</button>
+          <button class="accordion">Vins</button>
+          <button class="accordion">Bouteilles</button>
           <!-- White Wine -->
           <button class="accordion">Les vins blancs</button>
           <!-- Corse -->
@@ -564,9 +566,60 @@
           <br><br>
           <h2>Château Figeac – Saint-Emilion 1er Grand Cru classé 09</h2>
           <p>75 cL | 290€</p>
+          <!-- Glass -->
+          <button class="accordion">Verres</button>
+          <!-- Rosé wine -->
+          <button class="accordion">Vins rosés</button>
+          <h2>Rosé bio – la Winerie Adrien Pélissié 2020</h2>
+          <p>15 cL | 8€</p>
+          <br><br>
+          <h2>Domaine de l’Île « Bio » 20 Porquerolles Maison CHANEL</h2>
+          <p>15 cL | 10€</p>
+          <br><br>
+          <h2>Château Minuty – Rosé et Or Côtes de Provence 2020</h2>
+          <p>15 cL | 13€</p>
+          <!-- White wine -->
+          <button class="accordion">Vins blancs</button>
+          <h2>Viognier – Vermentino bio – la Winerie Adrien Pelissié 2020</h2>
+          <p>15 cL | 8€</p>
+          <br><br>
+          <h2>Chablis – Le Finage La Chablisienne 17</h2>
+          <p>15 cL | 10€</p>
+          <br><br>
+          <h2>Vézelay AOC Couvent des Saint Pères 17</h2>
+          <p>15 cL | 10€</p>
+          <br><br>
+          <h2>Pouilly Fumé Pascal Jolivet 2020</h2>
+          <p>15 cL | 12€</p>
+          <br><br>
+          <h2>Chenin – Le Grand Lever Domaine – La Bouche du Roi A. Pelissié & J. Brustis 20</h2>
+          <p>15 cL | 13€</p>
+          <br><br>
+          <h2>Château Petit-Guiraud Sauternes AOC – 19</h2>
+          <p>15 cL | 14€</p>
+          <!-- Red wine -->
+          <button class="accordion">Vins rouges</button>
+          <h2>Moulin à Vent Couvent des Thorins 2019</h2>
+          <p>15 cL | 10€</p>
+          <br><br>
+          <h2>Cabernet franc – Coquilles rouge Domaine – La Bouche du Roi A. Pelissié & J. Brustis 20</h2>
+          <p>15 cL | 12€</p>
+          <br><br>
+          <h2>Crozes-Hermitage – Les Launes Delas 20</h2>
+          <p>15 cL | 10€</p>
+          <br><br>
+          <h2>Chorey-Les-Beaunes – Les Poiriers Decelle & Villa 2018</h2>
+          <p>15 cL | 15€</p>
+          <br><br>
+          <h2>Saint-Estèphe 2017 La Devise de Lilian</h2>
+          <p>15 cL | 10€</p>
+          <br><br>
+          <h2>Château Landiras – Graves Jeanne de Lestonnac 2016</h2>
+          <p>15 cL | 10€</p>
 
           <!-- Champagne -->
           <button class="accordion">Champagnes</button>
+          <button class="accordion">Bouteilles</button>
           <h2>Rœderer brut premier</h2>
           <p>75 cL | 98€</p>
           <br><br>
@@ -614,6 +667,13 @@
           <p>75 cL | 240€</p>
           <h2>Cristal Roederer 2013</h2>
           <p>75 cL | 260€</p>
+          <!-- Cup -->
+          <button class="accordion">Coupes</button>
+          <h2>Roederer Brut Premier</h2>
+          <p>15 cL | 16€</p>
+          <br><br>
+          <h2>Roederer Blanc de Blancs 2014</h2>
+          <p>15 cL | 18€</p>
 
           <!-- Beer -->
           <button class="accordion">Bières</button>
