--- a/reservation.html
+++ b/reservation.html
@@ -19,6 +19,24 @@
       </div>
       </div>
     </header>
+    
+      <div id="hamburger">
+        <div id="menuToggle">
+          <input type="checkbox" />
+
+          <span></span>
+          <span></span>
+          <span></span>
+
+          <ul id="menu">
+            <a href="index.html"><li>Accueil</li></a>
+            <a href="carte.html"><li>Carte</li></a>
+            <a href="reservation.html"><li>Reservation</li></a>
+          
+          </ul>
+        </div>
+      </div>
+
     <nav>
       <ul>
         <li>
@@ -34,7 +52,7 @@
     </nav>
 
     <main>
-      <h1>Réserver une table</h1>
+      <h1 >Réserver une table</h1>
 
       <form>
         <label for="lname">Nom</label><br>
