--- a/carte.html
+++ b/carte.html
@@ -54,7 +54,7 @@
     <!-- Main -->
     <main>
       <button class="tablink" onclick="openPage('breakfast', this, 'goldenrod')">Petit déjeuner</button>
-      <button class="tablink" onclick="openPage('menu', this, 'goldenrod')" id="defaultOpen">Carte</button>
+      <button class="tablink" onclick="openPage('meal', this, 'goldenrod')" id="defaultOpen">Carte</button>
       <button class="tablink" onclick="openPage('drinks', this, 'goldenrod')">Boissons</button>
       
       <!-- Breakfast -->
@@ -198,7 +198,7 @@
       </div>
 
       <!-- Menu -->
-      <div id="menu" class="tabcontent">
+      <div id="meal" class="tabcontent">
         <!-- Appetizer -->
         <button class="accordion">Entrées</button>
         <div class="panel">
