--- a/carte.html
+++ b/carte.html
@@ -782,6 +782,148 @@
 
           <!-- Alcohol -->
           <button class="accordion">Nos alcools</button>
+          <!-- Armagnac -->
+          <button class="accordion">Armagnac</button>
+          <h2>Armagnac LAUBADE 1970</h2>
+          <p>40 mL | 15€</p>
+          <br><br>
+          <h2>L'encatada 1973 domaine des sables</h2>
+          <p>40 mL | 26€</p>
+          <br><br>
+          <h2>Chateau bordeuneuve hors d'âge</h2>
+          <p>40 mL | 15€</p>
+
+          <!-- Cognac -->
+          <button class="accordion">Cognac</button>
+          <h2>Hennesy very special</h2>
+          <p>40 mL | 12€</p>
+          <br><br>
+          <h2>Courvoisier XO</h2>
+          <p>40 mL | 25€</p>
+          <br><br>
+          <h2>Henessy paradis imperial</h2>
+          <p>40 mL | 180€</p>
+
+          <!-- Calvados -->
+          <button class="accordion">Calvados</button>
+          <h2>Christian DROUIN hors d'âge</h2>
+          <p>40 mL | 20€</p>
+          <br><br>
+          <h2>Christian DROUIN 1973</h2>
+          <p>40 mL | 55€</p>
+
+          <!-- Rhum -->
+          <button class="accordion">Rhum</button>
+          <h2>Ron Zacapa 23 ans Guatemala</h2>
+          <p>40 mL | 15€</p>
+          <br><br>
+          <h2>Bacardi 8 ans Porto Rico</h2>
+          <p>40 mL | 12€</p>
+          <br><br>
+          <h2>Angostura 1919 trinidad & tobago</h2>
+          <p>40 mL | 11€</p>
+          <br><br>
+          <h2>Diplomatico riserva</h2>
+          <p>40 mL | 15€</p>
+          <br><br>
+          <h2>La perle à 1710</h2>
+          <p>40 mL | 12€</p>
+          <br><br>
+          <h2>Barcelo imperial</h2>
+          <p>40 mL | 20€</p>
+
+          <!-- Vodka -->
+          <button class="accordion">Vodka</button>
+          <h2>Grey goose france</h2>
+          <p>40 mL | 13€</p>
+
+          <!-- Tequila -->
+          <button class="accordion">Tequila</button>
+          <h2>Patron alejo Mexique</h2>
+          <p>40 mL | 18€</p>
+          
+          <!-- Gin -->
+          <button class="accordion">Gin</button>
+          <h2>Hendrick's UK</h2>
+          <p>40 mL | 12€</p>
+          <br><br>
+          <h2>Citadelle france</h2>
+          <p>40 mL | 11€</p>
+
+          <!-- Whiskies -->
+          <button class="accordion">Whiskies</button>
+          <!-- Blended whisky -->
+          <button class="accordion">Blended whisky</button>
+          <h2>Johnnie Walker black label, Ecosse</h2>
+          <p>40 mL | 12€</p>
+          <br><br>
+          <h2>Hibiki 17 ans, Japon</h2>
+          <p>40 mL | 26€</p>
+          <!-- Single malt -->
+          <button class="accordion">Single malt</button>
+          <h2>Cardhu 12 ans speyside, Ecosse</h2>
+          <p>40 mL | 15€</p>
+          <br><br>
+          <h2>Glenffiddich 12 ans speyside, Ecosse</h2>
+          <p>40 mL | 12€</p>
+          <br><br>
+          <h2>Laphroaig 10 ans islay, Ecosse</h2>
+          <p>40 mL | 15€</p>
+          <br><br>
+          <h2>Oban 14 ans highlands, Ecosse</h2>
+          <p>40 mL | 15€</p>
+          <br><br>
+          <h2>Aberfeldy 12 ans speyside, Ecosse</h2>
+          <p>40 mL | 13€</p>
+          <br><br>
+          <h2>Bowmore 12 ans islay, Ecosse</h2>
+          <p>40 mL | 12€</p>
+          <h2>Craigglachie 13 ans speyside, Ecosse</h2>
+          <p>40 mL | 13€</p>
+          <!-- Bourbon & Rye whisky -->
+          <button class="accordion">Bourbon & Rye whisky</button>
+          <h2>Knob creek Kentucky, USA</h2>
+          <p>40 mL | 15€</p>
+          <br><br>
+          <h2>Maker's mark Kentucky, USA</h2>
+          <p>40 mL | 13€</p>
+          <br><br>
+          <h2>Jim Beam rye Kentucky, USA</h2>
+          <p>40 mL | 10€</p>
+
+          <!-- Grappa -->
+          <button class="accordion">Grappa</button>
+          <h2>Grappa di moscato giallo "CAPOVILLA" Italie</h2>
+          <p>40 mL | 15€</p>
+          <br><br>
+          <h2>Grappa di barolo giallo "CAPOVILLA" Italie</h2>
+          <p>40 mL | 15€</p>
+
+          <!-- Liqueurs et digestifs -->
+          <button class="accordion">Liqueurs et digestifs</button>
+          <h2>Get 27, Get 31</h2>
+          <p>40 mL | 9€</p>
+          <br><br>
+          <h2>Vieille prûne "Louis Roques"</h2>
+          <p>40 mL | 13€</p>
+          <br><br>
+          <h2>Eau de vie poire William</h2>
+          <p>40 mL | 10€</p>
+          <br><br>
+          <h2>Eau de vie mirabelle</h2>
+          <p>40 mL | 10€</p>
+          <br><br>
+          <h2>Eau de vie framboise</h2>
+          <p>40 mL | 10€</p>
+          <br><br>
+          <h2>Amaretto, Bailey's, Cointreau, Limoncello</h2>
+          <p>40 mL | 12€</p>
+          <br><br>
+          <h2>Chartreuse verte</h2>
+          <p>40 mL | 16€</p>
+          <h2>Chartreuse jaune</h2>
+          <p>40 mL | 16€</p>
+
         </div>
 
         <!-- Hot drink -->
