--- a/carte.html
+++ b/carte.html
@@ -53,6 +53,7 @@
       <button class="tablink" onclick="openPage('breakfast', this, 'goldenrod')">Petit déjeuner</button>
       <button class="tablink" onclick="openPage('meals', this, 'goldenrod')" id="defaultOpen">Carte</button>
       <button class="tablink" onclick="openPage('drinks', this, 'goldenrod')">Boissons</button>
+      <button class="tablink" onclick="openPage('allergens', this, 'goldenrod')">Allergènes</button>
       
       <!-- Breakfast -->
       <div id="breakfast" class="tabcontent">
@@ -947,6 +948,93 @@
           <h2>Chocolat</h2>
           <p>12€</p>
         </div>
+      </div>
+
+
+      <!-- Allergens -->
+      <div id="allergens" class="tabcontent">
+        <!-- Mustard -->
+        <button class="accordion">Moutarde</button>
+        <div class="panel">
+          <h2>Sauce creamy spicy</h2>
+          <br><br>
+          <h2>Tartare de boeuf</h2>
+          <br><br>
+          <h2>Crispy tuna sushi</h2>
+          <br><br>
+          <h2>Vinaigrettes</h2>
+          <br><br>
+          <h2>Mayonnaise</h2>
+        </div>
+        <!-- Crustacés -->
+        <button class="accordion">Crustacés</button>
+        <div class="panel">
+          <h2>King Crab</h2>
+          <br><br>
+          <h2>Sauce tigre</h2>
+          <br><br>
+          <h2>Rémoulade céleri & tourteau</h2>
+        </div>
+        <!-- Fishes -->
+        <button class="accordion">Poissons</button>
+        <div class="panel">
+          <h2>Crispy tuna sushi</h2>
+          <br><br>
+          <h2>Saumon fumé</h2>
+          <br><br>
+          <h2>Rémoulade céleri & tourteau</h2>
+          <br><br>
+          <h2>Carpaccio de saint Jacques</h2>
+          <br><br>
+          <h2>Noix de saint jacques snackées</h2>
+          <br><br>
+          <h2>Thon snacké</h2>
+          <br><br>
+          <h2>Cabillaud rôti</h2>
+          <br><br>
+          <h2>La sole</h2>
+          <br><br>
+          <h2>Tigre</h2>
+          <p>(Anchois dans la marinade)</p>
+        </div>
+        <!-- Mollusques -->
+        <button class="accordion">Mollusques</button>
+        <div class="panel">
+          <h2>Calamars croustillants</h2>
+          <br><br>
+          <h2>Tigre</h2>
+          <p>(Dans la marinade)</p>
+        <div>
+        <!-- Cereals, gluten -->
+        <button class="accordion">Céreales, gluten</button>
+        <div class="panel">
+          <h2>Saumon fumé</h2>
+          <p>(Quelques toasts)</p>
+          <br><br>
+          <h2>Calamars croustillants</h2>
+          <br><br>
+          <h2>Nem de poulet</h2>
+          <br><br>
+          <h2>Cabillaud</h2>
+          <br><br>
+          <h2>Burrata artichaut</h2>
+          <br><br>
+          <h2>Tartare de boeuf</h2>
+          <br><br>
+          <h2>Le tigre qui pleure</h2>
+          <br><br>
+          <h2>La milanaise</h2>
+          <br><br>
+          <h2>Penne</h2>
+          <br><br>
+          <h2>Tarte chocolat-café</h2>
+          <br><br>
+          <h2>Tarte citron</h2>
+          <br><br>
+          <h2>Ile flottante</h2>
+          <br><br>
+          <h2>Fruits rouges, glace yaourt et chantilly</h2>
+        <div>
       </div>
 
       <script>
