Allergens + css for tablinks

--- a/carte.html
+++ b/carte.html
@@ -1004,7 +1004,7 @@
           <br><br>
           <h2>Tigre</h2>
           <p>(Dans la marinade)</p>
-        <div>
+        </div>
         <!-- Cereals, gluten -->
         <button class="accordion">Céreales, gluten</button>
         <div class="panel">
@@ -1034,7 +1034,130 @@
           <h2>Ile flottante</h2>
           <br><br>
           <h2>Fruits rouges, glace yaourt et chantilly</h2>
-        <div>
+          <br><br>
+          <h2>Pain</h2>
+          <br><br>
+          <h2>Biscuit sur glaces et sorbets</h2>
+          <br><br>
+          <h2>Pavlova glacée poire</h2>
+        </div>
+        <!-- Milk -->
+        <button class="accordion">Lait</button>
+        <div class="panel">
+          <h2>Saumon fumé</h2>
+          <p>(Crème fraîche)</p>
+          <br><br>
+          <h2>Velouté de potimarron</h2>
+          <br><br>
+          <h2>Pomme purée</h2>
+          <br><br>
+          <h2>Sauce béarnaise</h2>
+          <br><br>
+          <h2>Comté 24 mois</h2>
+          <br><br>
+          <h2>Chèvre frais Dominique Fabre</h2>
+          <br><br>
+          <h2>Tarte chocolat-café</h2>
+          <br><br>
+          <h2>Ile flottante</h2>
+          <br><br>
+          <h2>Tarte citron</h2>
+          <br><br>
+          <h2>Glace vanille</h2>
+          <br><br>
+          <h2>Glace yaourt</h2>
+          <br><br>
+          <h2>Glace caramel beurre salé</h2>
+          <br><br>
+          <h2>Glace café</h2>
+          <br><br>
+          <h2>Crème chantilly</h2>
+          <br><br>
+          <h2>Pavlova Glacée poire</h2>
+        </div>
+        <!-- Arachid -->
+        <button class="accordion">Arachide</button>
+        <div class="panel">
+          <h2>Calamars frits</h2>
+          <p>(Friture)</p>
+          <br><br>
+          <h2>Nem de poulet</h2>
+          <p>(Friture)</p>
+          <br><br>
+          <h2>Dos de cabillaud</h2>
+          <br><br>
+          <h2>Le Tigre qui pleure</h2>
+          <br><br>
+          <h2>Tarte citron</h2>
+          <br><br>
+          <h2>Tarte chocolat-café</h2>
+          <br><br>
+          <h2>Ile flottante</h2>
+          <br><br>
+          <h2>Fruits rouges, glace yaourt et chantilly</h2>
+          <br><br>
+          <h2>Noix de cajou</h2>
+          <br><br>
+          <h2>Amandes</h2>
+        </div>
+        <!-- Eggs -->
+        <button class="accordion">Oeufs </button>
+        <div class="panel">
+          <h2>Oeufs au plat</h2>
+          <br><br>
+          <h2>Omelette</h2>
+          <br><br>
+          <h2>Oeufs bio mimosa</h2>
+          <br><br>
+          <h2>Creamy spicy sauce</h2>
+          <br><br>
+          <h2>Assaisonement salade de légumes crus</h2>
+          <br><br>
+          <h2>Calamars</h2>
+          <br><br>
+          <h2>Tartare de boeuf</h2>
+          <br><br>
+          <h2>Sauce béarnaise</h2>
+          <br><br>
+          <h2>Milanaise</h2>
+          <br><br>
+          <h2>Tarte chocolat</h2>
+          <br><br>
+          <h2>Tarte citron</h2>
+          <br><br>
+          <h2>Ile flottante</h2>
+          <br><br>
+          <h2>Fruits rouges, glace yaourt et chantilly</h2>
+          <br><br>
+          <h2>Glace</h2>
+          <p>(Vanille, caramel beurre salé, café et yaourt)</p>
+        </div>
+        <!-- Fruits à coque, Sésame -->
+        <button class="accordion">Fruits à coque, Sésame</button>
+        <div class="panel">
+          <h2>Salade de légumes cru</h2>
+          <br><br>
+          <h2>Cabillaud & pignons de pins</h2>
+          <br><br>
+          <h2>Le Tigre qui pleure</h2>
+          <br><br>
+          <h2>Basmati coco citronnelle</h2>
+          <br><br>
+          <h2>Macaron citron coco</h2>
+          <br><br>
+          <h2>Tarte chocolat-café</h2>
+          <br><br>
+          <h2>Fruits rouges, glace yaourt et chantilly</h2>
+          <br><br>
+          <h2>Noix de cajou</h2>
+          <br><br>
+          <h2>Amandes</h2>
+        </div>
+        <!-- Céleri -->
+        <button class="accordion">Céleri</button>
+        <div class="panel">
+          <h2>Healthy Green D-Tox</h2>
+        </div>
       </div>
 
       <script>
