Fixed Eden Hazan

--- a/carte.html
+++ b/carte.html
@@ -241,8 +241,12 @@
           <video autoplay muted loop>
             <source src="Videos/pizza.mp4" type=video/mp4>
           </video>
-          <img src="Pictures/Team/Pizza_guy.jpeg" alt="Photo Eden Hazan">
-          <figcaption>Eden Hazan</figcaption>
+          <div class="other-chief">
+            <img src="Pictures/Team/eden_hazan.jpeg" alt="Eden Hazan">
+            <p>Voici <b>Eden Hazan</b>, jeune chef d'une pizzaria de renom à Toronto : Pi Co.<br><br>
+            Nous collaborons ensemble pour vous proposer exceptionnellement cette pizza unique !
+            </p>
+          </div>
         </div>
 
         <!-- Fish -->
