Real final version reservation.html

--- a/carte.html
+++ b/carte.html
@@ -243,7 +243,7 @@
           </video>
           <div class="other-chief">
             <img src="Pictures/Team/eden_hazan.jpeg" alt="Eden Hazan">
-            <p>Voici <b>Eden Hazan</b>, jeune chef d'une pizzaria de renom à Toronto : Pi Co.<br><br>
+            <p>Voici <b>Eden Hazan</b>, jeune chef d'une pizzeria de renom à Toronto : Pi Co.<br><br>
             Nous collaborons ensemble pour vous proposer exceptionnellement cette pizza unique !
             </p>
           </div>
