--- a/carte.html
+++ b/carte.html
@@ -52,7 +52,7 @@
     <main>
       <div class="menunav">
         <button class="tablink" onclick="openPage('breakfast', this, 'goldenrod')">Petit déjeuner</button>
-        <button class="tablink" onclick="openPage('meals', this, 'goldenrod')" id="defaultOpen">Carte</button>
+        <button class="tablink" onclick="openPage('meals', this, 'goldenrod')" id="defaultOpen">Menu</button>
         <button class="tablink" onclick="openPage('drinks', this, 'goldenrod')">Boissons</button>
         <button class="tablink" onclick="openPage('allergens', this, 'goldenrod')">Allergènes</button>
       </div>
