--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     
     <!-- <div id="bloc1"> -->
       <header>
-        <img src="Pictures/Logos/Vache3.svg" alt="Logo vache">
-        <img src="Pictures/Logos/Murat.svg" alt="Logo Murat">
+        <img class="vache" src="Pictures/Logos/Vache3.svg" alt="Logo vache">
+        <img class="Logo-murat" src="Pictures/Logos/Murat.svg" alt="Logo Murat">
       </header>
     <!-- </div> -->
 
