--- a/reservation.html
+++ b/reservation.html
@@ -12,8 +12,8 @@
   <body>
     <!-- Bannière -->
     <header>
-      <img src="Pictures/Logos/Vache3.svg" alt="Logo vache">
-      <img src="Pictures/Logos/Murat.svg" alt="Logo Murat">
+      <img class="vache" src="Pictures/Logos/Vache3.svg" alt="Logo vache">
+      <img class="Logo-murat" src="Pictures/Logos/Murat.svg" alt="Logo Murat">
     </header>
     
       <div id="hamburger">
