--- a/reservation.html
+++ b/reservation.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="description" content="Page d'accueil du Murat.">
-    <link rel="icon" type="image/png" sizes="16x16" href="Images/Murat.svg">
+    <link rel="icon" type="image/png" sizes="16x16" href="Pictures/Logos/vache.svg">
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
     <title>Murat | Réservation</title>
   </head>
@@ -12,7 +12,7 @@
   <body>
     <!-- Bannière -->
     <header>
-      <img class="vache" src="Pictures/Logos/Vache3.svg" alt="Logo vache">
+      <img class="vache" src="Pictures/Logos/vache.svg" alt="Logo vache">
       <img class="Logo-murat" src="Pictures/Logos/Murat.svg" alt="Logo Murat">
     </header>
     
