--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="description" content="Page d'accueil du Murat.">
-    <link rel="icon" type="image/png" sizes="16x16" href="Pictures/Logos/vache.svg">
+    <link rel="icon" type="image/png" sizes="16x16" href="Pictures/Logos/murat.svg">
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
     <title>Murat | Accueil</title>
   </head>
@@ -15,7 +15,7 @@
     <!-- <div id="bloc1"> -->
       <header>
         <img class="vache" src="Pictures/Logos/vache.svg" alt="Logo vache">
-        <img class="Logo-murat" src="Pictures/Logos/Murat.svg" alt="Logo Murat">
+        <img class="Logo-murat" src="Pictures/Logos/murat.svg" alt="Logo Murat">
       </header>
     <!-- </div> -->
 
