--- a/carte.html
+++ b/carte.html
@@ -239,7 +239,7 @@
         <div class="panel">
           <h2>Vésuvio du Chef 23€</h2>
           <video autoplay muted loop>
-            <source src="videos/pizza.mp4" type=video/mp4>
+            <source src="Videos/pizza.mp4" type=video/mp4>
           </video>
           <div class="other-chief">
             <img src="Pictures/Team/eden_hazan.jpeg" alt="Eden Hazan">
