--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <h1 class="titre-mobile">Le Murat</h1>
 
         <video autoplay muted loop>
-          <source src="videos/présentation.mp4" type=video/mp4>
+          <source src="Videos/présentation.mp4" type=video/mp4>
         </video>
       </div>
         
