--- a/carte.html
+++ b/carte.html
@@ -249,7 +249,7 @@
         <li>
           <input id="group-667" type="checkbox" hidden/>
           <label for="group-667"><span class="fa fa-angle-right"></span>En ce moment</label>
-          <ul class="group-list">
+          <ul class="group-list" id="pizza">
             <li><h2>Vésuvio du Chef 23€</h2></li>
             <li>
               <video autoplay muted loop>
