--- a/carte.html
+++ b/carte.html
@@ -1186,7 +1186,7 @@
         <!-- Mustard -->
         <li>
           <input id="group-43" type="checkbox" hidden/>
-          <label for="group-43"><span class="fa fa-angle-right"></span>Mustard</label>
+          <label for="group-43"><span class="fa fa-angle-right"></span>Moutarde</label>
           <ul class="group-list">
             <li><h2>Sauce creamy spicy</h2></li>
             <li><h2>Tartare de boeuf</h2></li>
